tests/test-files/parse-loop.txt
================================================================================
100 Malformed loop expression
================================================================================

(package test-parser)

(define f (loop))

--------------------------------------------------------------------------------

error: Malformed loop expression
  --> test:3:15
   |
 3 |  (define f (loop))
   |                 ^ expected a loop body

================================================================================
Malformed loop expression
================================================================================

(package test-parser)

(define f (loop :alabel))

--------------------------------------------------------------------------------

error: Malformed loop expression
  --> test:3:23
   |
 3 |  (define f (loop :alabel))
   |                         ^ expected a loop body
